tictactoe minimal working ok
